--- a/main.html
+++ b/main.html
@@ -10,7 +10,16 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+ <div class="main-container">
+	 <h1>Testimonials</h1>
+    <div class="testimonial">
+      <p class="text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit."</p>
+      <p class="author">- John Doe</p>
+    </div>
+    <div class="testimonial">
+      <p class="text">"Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas."</p>
+      <p class="author">- Jane Smith</p>
+    </div>
 </body>
 
 </html>
